# Rust-Rocket-REST-API

./: Cargo.toml  test.db
src/: apiv1.rs  appconfig.rs  main.rs
