[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlite = "0.27.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }

[profile.release]
strip = true     #strip symbols from binary
lto = true       #enable link time operation
opt-level = "s"  #optimize for size 